feat: Add support for the Suprise Exam random event

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Random Event Solver
+author=Infinitay
+description=A plugin to help solve various random events
+tags=random,event,helper,solver,exam,surprise exam,quiz
+plugins=randomeventsolver.RandomEventSolverPlugin
