feat: Add support for the Beekeeper random event

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Random Event Solver
 author=Infinitay
 description=A plugin to help solve various random events
-tags=random,event,helper,solver,exam,surprise exam,quiz
+tags=random,event,helper,solver,exam,surprise exam,quiz,bee,beehive,beekeeper
 plugins=randomeventsolver.RandomEventSolverPlugin
