chore: Update plugin to v1.2 and add Freaky Forester tags

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Random Event Solver
-author=Infinitay
+author=infinitay
 description=A plugin to help solve various random events
-tags=random,event,helper,solver,exam,surprise exam,quiz,bee,beehive,beekeeper
+tags=random,event,helper,solver,exam,surprise exam,quiz,bee,beehive,beekeeper,freaky forester,pheasant
 plugins=randomeventsolver.RandomEventSolverPlugin
